--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "start_url": ".",
     "display": "standalone",
     "background_color": "#FFFFFF",
-    "theme_color": "#FFFFFF",
+    "theme_color": "#f3f4f6",
     "icons": [
         {
             "src": "icon-1440.png",
